# alertanio

./: README.md  pyproject.toml
alertanio/: __main__.py  alerta_client.py  database.py  zulip_client.py
alertanio/config/: static_config.py
alertanio/config/resources/: db_init.yaml
